meja/tests/recursive-let-destructuring.meja
let rec (x, _) = (15, ());
